<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.i550.geoquiz.QuizActivity">

    <TextView
        android:id="@+id/qtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/truebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atrue"/>
        <Button
            android:id="@+id/falsebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afalse"/>
    </LinearLayout>
<Button
    android:id="@+id/cheatbutton"
    android:layout_width="wrap_content"
    android:text="@string/cheat_b"
    android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/prevbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:drawableStart="@drawable/arrow_left"
            android:drawablePadding="4dp"/>
        <Button
            android:id="@+id/nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:drawableEnd="@drawable/arrow_right"
            android:drawablePadding="4dp"/>
    </LinearLayout>

</LinearLayout>
